--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project: Rock Paper Scissors</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Play: Rock Paper Scissors</h1>
-    
-
-
-
     
     <script src="script.js"></script>
 </body>
